# openscribe

./: .gitignore  CONTRIBUTING.md  LICENSE  Package.swift  README.md
.github/workflows/: ci.yml  release.yml
Resources/: AppIcon.icns
Sources/OpenScribeApp/: BeepSuppressor.swift  TranscribeApp.swift
Sources/OpenScribeCore/Audio/: AudioEngine.swift  WaveformAnalyzer.swift
Sources/OpenScribeCore/Models/: LoopRegion.swift
Sources/OpenScribeCore/ViewModels/: FileState.swift  PlayerViewModel.swift  RecentFilesStore.swift
Sources/OpenScribeModels/: LoopRegion.swift
Sources/OpenScribeUI/Utilities/: FrameReporter.swift  ScrollWheelReader.swift
Sources/OpenScribeUI/Views/: ContentView.swift  ShortcutsView.swift  TransportView.swift  WaveformView.swift
Sources/TranscribeApp/: TranscribeApp.swift
Tests/TranscribeAppTests/: LoopRegionTests.swift  PlayerViewModelTests.swift
cpp/: AppIcon.icns  CMakeLists.txt  build.sh  bundle_helper.sh  dmg_background.py  entitlements.plist  make_dmg.sh  make_icon.swift
cpp/src/: AppDelegate.h  AppDelegate.mm  AudioEngine.h  AudioEngine.mm  BasicPitchTranscriber.h  BasicPitchTranscriber.mm  MainWindow.h  MainWindow.mm  SettingsWindowController.h  SettingsWindowController.mm  StemSeparator.h  StemSeparator.mm  TimelineRulerView.h  TimelineRulerView.mm  WaveformShaders.metal  WaveformView.h  WaveformView.mm  main.mm
scripts/: build-app.sh  make-icon.swift
tools/stem-helper/: .gitignore  README.md  build.sh  requirements.txt  separate.py  separate.spec
tools/transcribe-helper/: transcribe.py
(+7 files in other folders)
